# specK10trum

./: .gitignore  128K_TAPE_ON_48K.md  AUDIO_ANALYSIS.md  BOOT_SEQUENCE.md  CMakeLists.txt  CROSS_MACHINE_INSTALOAD.md  INSTALOAD_128K_ON_48K.md  INSTALOAD_BUG_ANALYSIS.md  LCD_MESSAGING.md  LICENSE  README.md  TAPE_VALIDATION.md  WEBSERVER_ISSUES.md  WIFI_DEBUG_GUIDE.md  WIFI_RECONNECTION.md  WIFI_TROUBLESHOOTING.md  inspect_unihiker.py  platformio.ini  refactor  sdkconfig.unihiker_k10  untitled-plan-ssotOptimizationCleanup.prompt.md
.claude/: settings.local.json
.jules/: bolt.md
assets/: README.md
docs/: ESP_LOG_SETUP.md  K10_Development_Reference.md  PSRAM_SETUP.md  contention.md  (+4 more)
src/: CMakeLists.txt  main.cpp  partitions.csv
src/audio/: Audio.cpp  Audio.h
src/display/: Display.cpp  Display.h  Menu.h  splash_image.h
src/expander/: Expander.cpp  Expander.h
src/input/: Input.cpp  Input.h
src/instrumentation/: Instrumentation.cpp  Instrumentation.h
src/spectrum/: Beeper.cpp  Beeper.h  IMemoryBus.h  PSG.cpp  PSG.h  Snapshot.cpp  Snapshot.h  Spectrum128K.cpp  Spectrum128K.h  Spectrum48K.cpp  Spectrum48K.h  SpectrumBase.cpp  SpectrumBase.h  SpectrumBase_IO.cpp  SpectrumBase_Memory.cpp  SpectrumBase_Rendering.cpp  SpectrumBase_Snapshot.cpp  SpectrumBase_Tape.cpp  SpectrumBase_ULA.cpp  SpectrumPalette.h  Tape.cpp  Tape.h
src/webserver/: Webserver.cpp  Webserver.h  command_queue.h  index.html  index_html.h
src/wifi_prov/: README.md  wifi_prov.cpp  wifi_prov.cpp.bak  wifi_prov.cpp.cleaned  wifi_prov.h  wifi_reconnect_task.inc
src/z80/: z80.c  z80.h
(+57 files in other folders)
